# messaging-thread-pool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REVIEW_REPORT.md
.github/: copilot-instructions.md
.github/prompts/: plan-codeReview.prompt.md  plan-macros.prompt.md
benches/: element_creation.rs  element_creation_with_mimalloc.rs  example_random_batches.rs
messaging-thread-pool/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
messaging-thread-pool-macros/: CHANGELOG.md  Cargo.toml
messaging-thread-pool-macros/src/: generation.rs  lib.rs  parsing.rs
messaging-thread-pool/benches/: element_creation.rs  element_creation_with_mimalloc.rs  example_random_batches.rs  message_throughput.rs
messaging-thread-pool/src/: api_specification.rs  drop.rs  global_test_scope.rs  id_being_processed.rs  id_targeted.rs  lib.rs  new.rs  receive.rs  request_with_response.rs  send.rs  send_and_receive.rs  sender_couplet.rs  shutdown.rs
messaging-thread-pool/src/id_based_blocking/: mod.rs
messaging-thread-pool/src/id_provider/: id_provider_mutex.rs  mod.rs
messaging-thread-pool/src/pool_item/: mod.rs
messaging-thread-pool/src/pool_thread/: message_loop.rs  mod.rs  new.rs
messaging-thread-pool/src/request_response/: mod.rs
messaging-thread-pool/src/samples/: chat_room.rs  mod.rs  user_session.rs
messaging-thread-pool/src/samples/randoms/: mod.rs  pool_item.rs
messaging-thread-pool/src/samples/randoms/randoms_api/: mean_request.rs  mean_response.rs  mod.rs  panic_response.rs  sum_response.rs
messaging-thread-pool/src/samples/randoms_batch/: mod.rs  pool_item.rs
messaging-thread-pool/src/samples/randoms_batch/randoms_batch_api/: randoms_batch_add_request.rs  sum_of_sums_response.rs
messaging-thread-pool/src/sender_and_receiver/: mod.rs  sender_and_receiver_mock.rs  sender_and_receiver_raw_mock.rs  thread_pool.rs
messaging-thread-pool/src/thread_endpoint/: mod.rs
messaging-thread-pool/src/thread_request_response/: add_response.rs  mod.rs  remove_pool_item_response.rs  thread_abort_request.rs  thread_abort_response.rs  thread_echo_request.rs  thread_echo_response.rs
messaging-thread-pool/tests/: example_chat_room.rs  example_mocking.rs  example_rc_state.rs  example_simple.rs  example_two_level.rs  macro_test.rs
src/: api_specification.rs  drop.rs  global_test_scope.rs  id_being_processed.rs  id_targeted.rs  lib.rs  new.rs  new2.rs  receive.rs  send.rs  send_and_receive.rs  sender_couplet.rs  shutdown.rs  subscriber_and_guard.rs  thread_request.rs  thread_response.rs  thread_shutdown_response.rs  type_mappings.rs
src/element/: element_factory.rs  element_tracing.rs  message_processor.rs  mod.rs
src/element/request_response_pair/: mod.rs
src/id_based_blocking/: cloneable_id_based_writer.rs  id_based_writer.rs  mod.rs
src/id_provider/: id_provider_mutex.rs  id_provider_static.rs  mod.rs  sized_id_provider.rs
src/pool_item/: drop_guard.rs  guard_drop.rs  mod.rs  new_pool_item_error.rs  pool_item_api.rs
src/pool_thread/: message_loop.rs  mod.rs  new.rs  shutdown_child_pool.rs
src/pool_thread_2/: message_loop.rs  mod.rs  new.rs  shutdown_child_pool.rs
src/pool_thread_old/: message_loop.rs  mod.rs
src/request_response/: id_targeted.rs  mod.rs  request_message.rs  request_response_2.rs  request_response_message.rs  response_message.rs
src/request_response_2/: mod.rs
src/request_response_pair/: mod.rs
src/samples/: id_provider_static.rs  mod.rs
src/samples/randoms/: message_processor.rs  mod.rs  pool_item.rs  randoms_tracing.rs
src/samples/randoms/randoms_api/: mean_request.rs  mean_response.rs  mod.rs  panic_request.rs  panic_response.rs  randoms_add_request.rs  randoms_init_request.rs  randoms_init_response.rs  sum_request.rs  sum_response.rs
src/samples/randoms/randoms_request/: init_request.rs  mean_request.rs  mod.rs  randoms_init_request.rs  sum_request.rs
src/samples/randoms/randoms_response/: init_response.rs  mean_response.rs  mod.rs  randoms_init_response.rs  sum_response.rs
src/samples/randoms_batch/: element_factory.rs  message_processor.rs  mod.rs  pool_item.rs  randoms_batch_tracing.rs
src/samples/randoms_batch/randoms_batch_api/: mod.rs  randoms_batch_add_request.rs  sum_of_sums_request.rs  sum_of_sums_response.rs
src/samples/randoms_batch/randoms_batch_request/: init_request.rs  mod.rs  sum_of_sums_request.rs  (+1 more)
src/sender_and_receiver/: mod.rs  sender_and_receiver_mock.rs  sender_and_receiver_raw_mock.rs  sender_and_receiver_unimplemented.rs  thread_pool.rs
src/sender_couplet/: get_return_to.rs  get_thread_request.rs  mod.rs
src/sender_couplet_2/: mod.rs
src/thread_endpoint/: mod.rs  send.rs
src/thread_pool_batcher/: basic_thread_pool_batcher.rs  batch_for_send.rs  mod.rs  send_batch.rs  shutdown_pool.rs  thread_pool_batcher_concrete.rs  thread_pool_batcher_mock.rs
src/thread_pool_sender_and_receiver/: mod.rs  sender_and_receiver_mock.rs  sender_and_receiver_unimplemented.rs  thread_pool.rs  thread_pool_mock.rs
src/thread_request_response/: add_error.rs  add_response.rs  id.rs  macros.rs  mod.rs  remove_pool_item_request.rs  remove_pool_item_response.rs  remove_response.rs  thread_abort_request.rs  thread_abort_response.rs  thread_echo.rs  thread_echo_request.rs  thread_echo_response.rs  thread_shutdown_request.rs  thread_shutdown_response.rs
src/tracing_switcher/: cloneable_switcher.rs  mod.rs  selective_tracer.rs  switcher.rs
tests/: example_mocking.rs  example_simple.rs  example_two_level.rs
(+4 files in other folders)
