[package]
name = "messaging_thread_pool"
version = "3.0.14-alpha"
authors = ["cainem"]
edition = '2021'
description = "A library for aiding the creation of typed thread pool of objects that is communicated with via channels"
license = "MIT"
homepage = "https://github.com/cainem/messaging-thread-pool"
repository = "https://github.com/cainem/messaging-thread-pool"
documentation = "https://docs.rs/messaging_thread_pool/latest/messaging_thread_pool/"
readme = "README.md"
keywords = ["threadpool", "thread", "pool", "parallelism", "messaging"]
categories = ["concurrency"]

[dependencies]
tracing = { version = "0.1.37", features = [ "max_level_trace", "release_max_level_trace" ] }
tracing-subscriber = { version = "0.3.16", features = [ "fmt", "std", "json"] }
tracing-attributes = "0.1.23"
tracing-appender = "0.2.2"
crossbeam-channel = "0.5.6"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
once_cell = "1.16.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "element_creation"
harness = false


