[package]
name = "messaging_thread_pool"
version = "3.1.4-beta"
authors = ["cainem"]
edition = '2021'
description = "A library for aiding the creation of typed thread pool of objects that is communicated with via channels"
license = "MIT"
homepage = "https://github.com/cainem/messaging-thread-pool"
repository = "https://github.com/cainem/messaging-thread-pool"
documentation = "https://docs.rs/messaging_thread_pool/latest/messaging_thread_pool/"
readme = "README.md"
keywords = ["threadpool", "thread", "pool", "parallelism", "messaging"]
categories = ["concurrency"]

[dependencies]
tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "json"] }
tracing-attributes = "0.1.27"
tracing-appender = "0.2.2"
crossbeam-channel = "0.5.8"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
once_cell = "1.18.0"

[dev-dependencies]
criterion = "0.5.1"
mimalloc = { version = "0.1" }

[[bench]]
name = "element_creation"
harness = false

[[bench]]
name = "element_creation_with_mimalloc"
harness = false

[profile.release]
debug = true # Include debug symbols
