[package]
name = "messaging_thread_pool"
version = "4.0.0-beta"
authors = ["cainem"]
edition = '2021'
description = "A library for aiding the creation of typed thread pool of objects that is communicated with via channels"
license = "MIT"
homepage = "https://github.com/cainem/messaging-thread-pool"
repository = "https://github.com/cainem/messaging-thread-pool"
documentation = "https://docs.rs/messaging_thread_pool/latest/messaging_thread_pool/"
readme = "README.md"
keywords = ["threadpool", "thread", "pool", "parallelism", "messaging"]
categories = ["concurrency"]

[dependencies]
tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-core = { version = "0.1" }
tracing-attributes = "0.1.27"
tracing-appender = "0.2.3"
crossbeam-channel = "0.5.12"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"
mimalloc = { version = "0.1" }
const_format = "0.2.32"

[[bench]]
name = "element_creation"
harness = false
[[bench]]
name = "element_creation_with_mimalloc"
harness = false
[[bench]]
name = "example_random_batches"
harness = false


[profile.release]
debug = true # Include debug symbols
