[package]
name = "messaging-thread-pool-macros"
version = "0.1.0"
edition = "2021"
authors = ["cainem"]
description = "Macros for the messaging-thread-pool library"
license = "MIT"
homepage = "https://github.com/cainem/messaging-thread-pool"
repository = "https://github.com/cainem/messaging-thread-pool"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
